--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Hello world
-        run: echo "Hello world!"
+        run: cat hello.php
 
   second-job:
     needs: first-job
