--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -13,7 +13,7 @@ jobs:
         run: echo "Hello world!"
 
   second-job:
-    if: false
+    if: ${{ github.ref == 'refs/heads/main' }}
     needs: first-job
     runs-on: ubuntu-latest
 
