--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -1,8 +1,6 @@
 name: "ga-example"
 
-on:
-  push:
-    branches: ["main"]
+on: push
 
 jobs:
   first-job:
@@ -19,4 +17,4 @@ jobs:
 
     steps:
       - name: Second hellow world
-        run: echo "Second Hellow world!"
+        run: echo "Second Hellow world! - omitted"
