--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -6,9 +6,12 @@ jobs:
   first-job:
     runs-on: ubuntu-latest
 
+    env:
+      NAME: CodigoFacilito
+
     steps:
       - name: Hello world
-        run: echo "Hello world!"
+        run: echo "Hello world! - $NAME"
 
   second-job:
     if: ${{ github.ref == 'refs/heads/main' }}
