--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -21,3 +21,16 @@ jobs:
     steps:
       - name: Second hellow world
         run: echo "Second Hellow world! - ${{ github.ref }}"
+
+  third-job:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Working dir
+        run: ls -al
+
+      - name: Action
+        uses: actions/checkout@v4
+
+      - name: Working dir after action
+        run: ls -al
